fixed links & reverted circle icon visibility

--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ body {
 
 .main {
     padding: 48px;
-    margin-left: 4vw;
-    margin-right: 4vw;
+    margin-left: 3vw;
+    margin-right: 3vw;
 }
 
 .navbar {
@@ -73,6 +73,8 @@ body {
     color: #000;
     font-size: 1.35em;
     font-weight: 500;
+    margin-right: 30px;
+    margin-top: -4px;
 }
 
 .logo a:visited {
@@ -127,7 +129,7 @@ p a {
     width: 40px;
     height: 40px;
     background-color: #000;
-    display: inline-block;
+    display: contents;
     margin-right: 24px;
     padding-top: 10px;
     text-align: center;
